fix: scrollbar

--- a/src/extension-shell/webui.less
+++ b/src/extension-shell/webui.less
@@ -39,7 +39,7 @@ h1 {
   height: 100vh;
 }
 
-@scrollbar-w: 8px;
+@scrollbar-w: 3px;
 @scrollbar-max-w: 10px;
 
 ::-webkit-scrollbar {
@@ -57,12 +57,13 @@ h1 {
 
 ::-webkit-scrollbar-thumb {
   border-radius: 1em;
-  background-color: rgba(var(--color-comment1-rgb), 0.5);
+  background-color: rgba(255, 255, 255, 0.3);
 }
 
 ::-webkit-scrollbar-track {
   border-radius: 1em;
-  background-color: rgba(var(--color-comment2-rgb), 0.5);
+  // background-color: rgba(var(--color-comment2-rgb), 0.5);
+  background-color: transparent;
 }
 
 .scrollbar-hover-style() {
